force-app/main/default/objects/cdcpc__RD_Output_OW_Details__c/cdcpc__RD_Output_OW_Details__c.object-meta.xml
<CustomObject>
    <label>RD Output OW Details</label>
    <nameField>
        <label>RD Output OW Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Output OW Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>