force-app/main/default/objects/cdcpc__RD_Output_OW_Details__c/fields/cdcpc__Comp__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Comp__c</fullName>
    <label>Comp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>