force-app/main/default/objects/cdcpc__RD_Output_OW_Details__c/fields/cdcpc__NumVal1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NumVal1__c</fullName>
    <label>NumVal1</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>