force-app/main/default/objects/cdcpc__RD_Output_OW_Details__c/fields/cdcpc__OWDesc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OWDesc__c</fullName>
    <label>OWDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>