force-app/main/default/objects/cdcpc__RD_Output_OW_Details__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Text1Val__c</columns>
    <columns>cdcpc__Text2Val__c</columns>
    <columns>cdcpc__OWDesc__c</columns>
    <columns>cdcpc__Comp__c</columns>
    <columns>cdcpc__NumVal1__c</columns>
    <columns>cdcpc__NumVal2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>